@@ -1,5 +1,6 @@
 version 0.6.3 - xx-Jan-2009
  . Actions: ScaleTo & ScaleBy supports X and Y factors (issue #156)
+ . Actions: Added collections of Ease Actions (issue #157)
  . CocosNode: fixed absolutePosition (issue #140)
  . CocosNode: unschedule timers only when running (issue #142)
  . Menu: MenuItemToggle supports assigning the selectedIndex (issue #152)
